# Cowork-CC-dispatch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
_ai_workspace/bridge/outbox/: result_009.md
ccd/: __init__.py  __main__.py  adversarial.py  agent.py  ai_review.py  backfill.py  brief.py  chain.py  cli.py  dashboard.py  discover.py  dispatch.py  guard.py  integrate.py  loop.py  metrics.py  models.py  nightly.py  profile.py  protocol.py  retrospect.py  retry.py  run_writer.py  sweep.py  translate.py
docs/: DESIGN.md  DESIGN_v3_draft.md  architecture.md  index.html  redteam_2026-06-10.md
docs/data/: Cowork-CC-dispatch.json  axis-knowledge-rag.json  実務案件A.json  実務案件B.json  実務案件C.json
examples/: register_nightly.ps1.template
scripts/launchers/: nightly_all_wrapper.sh
tests/: _adversarial_targets_for_test.py  test_adversarial.py  test_agent.py  test_ai_review.py  test_backfill.py  test_brief.py  test_chain.py  test_cli.py  test_dashboard.py  test_discover.py  test_dispatch.py  test_guard.py  test_integrate.py  test_launchers.py  test_loop.py  test_metrics.py  test_models.py  test_mutation_invocation.py  test_mutation_subset.py  test_nightly.py  test_profile.py  test_protocol.py  test_retrospect.py  test_retry.py  test_run_writer.py  test_smoke.py  test_spec_047.py  test_sweep.py  test_translate.py
tests/fixtures/backfill/: result_001.md  result_002.md  result_003.md  result_004.md  result_005.md  result_006.md  result_010.md  result_011.md  result_012.md  result_013.md  result_014.md  result_015.md  result_016.md
tests/fixtures/dashboard/: bash-prototype.json  ccd-native.json
