[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cowork-cc-dispatch"
version = "0.4.0"
description = "Orchestration substrate for one AI agent to dispatch work to another (Cowork → Claude Code)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cowork" }]
dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
]

[project.scripts]
ccd = "ccd.cli:main"

[tool.setuptools.packages.find]
include = ["ccd*"]
exclude = ["tests*", "_ai_workspace*", "docs*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["_ai_workspace"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
