[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cowork-cc-dispatch"
version = "0.31.0"
description = "Orchestration substrate for one AI agent to dispatch work to another (Cowork → Claude Code)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cowork" }]
dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
]
maintain = [
  # `ccd discover` shells out to mutmut (v2 Phase 1 — spec_013). Pinned to
  # 2.x because mutmut 3.x rewrote the CLI shape; `MutmutRunner._show`
  # parses 2.x's `mutmut show` unified-diff output.
  "mutmut>=2.4,<3",
]

[project.scripts]
ccd = "ccd.cli:main"

[tool.setuptools.packages.find]
include = ["ccd*"]
exclude = ["tests*", "_ai_workspace*", "docs*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["_ai_workspace"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
  # spec_046 — heavy integration tests that spawn a real `ccd nightly-all`,
  # a real `mutmut`, or provision an iso-venv (`python -m venv` + `pip
  # install -e`). They are correct and run in the FULL suite (R4 / CI), but
  # mutation testing re-runs the test suite once PER mutant, and these tests
  # nest another nightly-all/mutmut/iso-venv inside that already-isolated
  # mutmut subprocess — turning one mutant into a multi-minute provision and
  # exploding per-mutant cost non-linearly. The CCD profile's mutation runner
  # therefore selects `-m "not slow"` so mutation discovery / R5 recheck skip
  # them. Marking is by decorator (`@pytest.mark.slow`) — never the
  # module-level `pytestmark =` assignment form, which guard R2 flags.
  "slow: heavy integration test excluded from the mutation-testing subset (spec_046)",
]
